refactor(travel-request): refatora controller de pedidos de viagem
